tests/js/valid/record/parses/type-6.buri
A = { foo: Str, bar: [Int], }