tests/js/invalid/record/mismatched-type-2.buri
Data = {
    data: [Str],
}

data: Data = {
    data: [1, 2, 3],
}